--- a/views/pages/entry.ejs
+++ b/views/pages/entry.ejs
@@ -16,8 +16,8 @@
 
   label{
     display: inline-block;
-    width: 150px;
-    text-align: right;
+    width: auto;
+    text-align: left;
   }
 
   input{
@@ -42,8 +42,9 @@
 </head>
 <form method="post">
   <div>
-    <label for="name">Please enter a name:</label>
-    <input type="text" id="name" name="name" autofocus="true" required="true">
+    <label>Welcome to the chatroom!</label>
+    <label for="name_entry">Please enter a name:</label>
+    <input type="text" id="name_entry" name="name" autofocus="true" required="true">
   </div>
 </form>
 </html>
