--- a/views/pages/entry.ejs
+++ b/views/pages/entry.ejs
@@ -8,6 +8,7 @@
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
+    background-color: #D0DDFF;
   }
 
   form div + div{
@@ -36,7 +37,7 @@
   }
 
   button{
-    margin-left: .5em;
+    margin-left: 6em;
   }
 </style>
 </head>
@@ -45,6 +46,9 @@
     <label>Welcome to the chatroom!</label>
     <label for="name_entry">Please enter a name:</label>
     <input type="text" id="name_entry" name="name" autofocus="true" required="true">
+  </div>
+  <div>
+    <button type="submit">Enter the chatroom</button>
   </div>
 </form>
 </html>
