--- a/views/pages/chatroom.ejs
+++ b/views/pages/chatroom.ejs
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  form{
-    margin: 0 auto;
-    width: 700px;
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-  }
+  <style>
+    form{
+      margin: 0 auto;
+      width: 700px;
+      padding: 1em;
+      border: 1px solid #CCC;
+      border-radius: 1em;
+      background-color: #D0DDFF;
+    }
 
-  form div + div{
-    margin-top: 1em;
-  }
+    form div + div{
+      margin-top: 1em;
+    }
 
-  label{
-    display: inline-block;
-    width: auto;
-    text-align: left;
-  }
+    label{
+      display: inline-block;
+      width: auto;
+      text-align: left;
+    }
 
-  input, textarea{
-    font: 1em sans-serif;
-    width: 590px;
-    box-sizing: border-box;
-    border: 1px solid #999;
-  }
+    input, textarea{
+      font: 1em sans-serif;
+      width: 590px;
+      box-sizing: border-box;
+      border: 1px solid #999;
+    }
 
-  textarea{
-    height: 20em;
-    width: 700px;
-    resize: none;
-    color: #000000;
-    background-color: #FFFFFF;
-  }
+    textarea{
+      height: 20em;
+      width: 700px;
+      resize: none;
+      color: #000000;
+      background-color: #F0FFFF;
+    }
 
-  input:focus{
-    border-color: #000;
-  }
+    input:focus{
+      border-color: #000;
+    }
 
-  .button{
-    padding-left: 70px;
-  }
+    .button{
+      padding-left: 70px;
+    }
 
-  button{
-    margin-left: .5em;
-  }
-</style>
+    button{
+      margin-left: .5em;
+    }
+  </style>
 </head>
 <form method="post">
   <div>
-    <label>Hello <%=name%>!</label>
+    <label>Hello <%=name%>!</label><button formaction="/" formmethod="get">Sign out</button>
     <textarea cols="50" id="message_window" wrap="soft" disabled="true"><%=message%></textarea>
   </div>
   <div>
