--- a/views/pages/chatroom.ejs
+++ b/views/pages/chatroom.ejs
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src='/socket.io/socket.io.js'></script>
+  <script>
+    var socket = io();
+    socket.on("newMessage", function(){
+      location.reload(true);
+    })
+    setTimeout(function(){
+      var textarea = document.getElementById('message_window');
+      textarea.scrollTop = textarea.scrollHeight;
+    }, 10)
+  </script>
   <style>
     form{
       margin: 0 auto;
@@ -52,7 +63,9 @@
 <form method="post">
   <div>
     <label>Hello <%=name%>!</label>
-    <textarea cols="50" id="message_window" name="message_window" wrap="soft" disabled="true"><%=message%></textarea>
+    <textarea cols="50" id="message_window" name="message_window" wrap="soft" disabled="true"><%if (messages.length === 0) { %>Welcome to the chatroom, type something below to get started!<% } else for(var i = 0; i < messages.length; ++i) {%>
+<%=messages[i]%><% } %>
+    </textarea>
   </div>
   <div>
     <input type="text" id="messsage_box" name="message" autofocus="true"><button type="submit">Send message</button>
