--- a/views/pages/entry.ejs
+++ b/views/pages/entry.ejs
@@ -41,7 +41,7 @@
   }
 </style>
 </head>
-<form method="post">
+<form method="post" autocomplete="off">
   <div>
     <label>Welcome to the chatroom!</label>
     <label for="name_entry">Please enter a name:</label>
