Chat bubbles implemented

--- a/views/pages/entry.ejs
+++ b/views/pages/entry.ejs
@@ -41,6 +41,7 @@
       display: inline-block;
       width: auto;
       text-align: left;
+      font: 1em sans-serif;
     }
 
     input{
@@ -59,7 +60,8 @@
     }
 
     button{
-      margin-left: 3em;
+      margin-left: 2.5em;
+      font: 1em sans-serif;
     }
   </style>
 </head>
