--- a/views/pages/chatroom.ejs
+++ b/views/pages/chatroom.ejs
@@ -52,18 +52,26 @@
         return response.json();
       }).then(function(data){
         var messages = data.messages;
-        var textarea = document.getElementById("message_window");
-        textarea.innerHTML = "";
+        var chatarea = document.getElementById("chat");
+        chatarea.innerHTML = "";
         for(var i=0;i<messages.length;i++){
-          if(i < (messages.length -1)){
-            textarea.innerHTML += messages[i] + "\n";
+          if(messages[i].substr(0, messages[i].indexOf(":")) != "<%=name%>"){
+            var bubble_you = document.createElement("div");
+            bubble_you.setAttribute("class", "bubble you");
+            var your_message = messages[i];
+            bubble_you.innerHTML += your_message;
+            chatarea.appendChild(bubble_you);
           }
           else{
-            textarea.innerHTML += messages[i];
+            var bubble_me = document.createElement("div");
+            bubble_me.setAttribute("class", "bubble me");
+            var my_message = messages[i];
+            bubble_me.innerHTML += my_message;
+            chatarea.appendChild(bubble_me);
           }
         }
         setTimeout(function(){
-          var textarea = document.getElementById("message_window");
+          var textarea = document.getElementById("chat");
           textarea.scrollTop = textarea.scrollHeight;
         }, 10) // Attempt to stick to the most recent message to prevent the user from being thrown back to the top each time a new message is sent
       })
@@ -86,7 +94,7 @@
       document.getElementById("sign_out").addEventListener("click", function(event){
         window.location = "/logout";
       })
-      var textarea = document.getElementById("message_window");
+      var textarea = document.getElementById("chat");
       textarea.scrollTop = textarea.scrollHeight;
       var chatform = document.getElementById("chatroom");
       chatform.addEventListener("submit", function(event){
@@ -127,14 +135,12 @@
 
     input, textarea{
       font: 1em sans-serif;
-      width: 560px;
+      width: 700px;
       box-sizing: border-box;
       border: 1px solid #999;
     }
 
     textarea{
-      height: 20em;
-      width: 700px;
       resize: none;
       color: #000000;
       background-color: #F0FFFF;
@@ -150,28 +156,102 @@
       border-color: #000;
     }
 
-    .button{
-      padding-left: 0px;
-    }
-
     button{
       margin-left: .1em;
       font: 1em sans-serif;
     }
+
+    .chat {
+      width: 700px;
+      height: 500px;
+      overflow-y: scroll;
+      background-color: #F0FFFF;
+      padding-bottom: 1em;
+    }
+
+    .bubble{
+      background-color: #F2F2F2;
+      border-radius: 5px;
+      box-shadow: 0 0 6px #B2B2B2;
+      display: inline-block;
+      padding: 10px 18px;
+      position: relative;
+      vertical-align: top;
+      box-shadow: none;
+    }
+
+    .bubble::before {
+      background-color: #F2F2F2;
+      content: "\00a0";
+      display: block;
+      height: 16px;
+      position: absolute;
+      top: 11px;
+      transform:             rotate( 29deg ) skew( -35deg );
+          -moz-transform:    rotate( 29deg ) skew( -35deg );
+          -ms-transform:     rotate( 29deg ) skew( -35deg );
+          -o-transform:      rotate( 29deg ) skew( -35deg );
+          -webkit-transform: rotate( 29deg ) skew( -35deg );
+      width:  20px;
+      box-shadow: none;
+    }
+
+    .me {
+      float: right;
+      margin: 5px 45px 5px 20px;
+      clear: both;
+      background-color: #2273e5;
+      color: #FFFFFF;
+    }
+
+    .me::before {
+      right: -9px;
+      background-color: #2273e5;
+    }
+
+    .me + .me {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      width: 200px;
+      border-radius: 0px;
+    }
+
+    .me + .me:last-child{
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+
+    .you {
+      float: left;
+      margin: 5px 20px 5px 45px;
+      clear: both;
+      background-color: #97e522;
+    }
+
+    .you::before {
+      left: -9px;
+      background-color: #97e522;
+    }
   </style>
 </head>
 <form method="post" id="chatroom" autocomplete="off">
-  <div>
-    <textarea id="message_window" name="message_window" wrap="soft" disabled="true"><%if (messages.length === 0) { %>Welcome to the chatroom, type something below to get started!<% } else for(var i = 0; i < messages.length; ++i) {%>
-<%=messages[i]%><% } %></textarea>
-  </div>
-  <div>
-    <label>Hello <%=name%>!</label>
+  <div class="chat" id="chat"><%
+    for(var i=0;i<messages.length;i++) {
+      if(messages[i].substr(0, messages[i].indexOf(":")) !== name) {
+        %><div class="bubble you"><%=messages[i]%></div><%
+      }
+      else{
+        %><div class="bubble me"><%=messages[i]%></div><%
+      }
+    }%>
   </div>
   <div>
     <input type="text" id="messsage_box" name="message" autofocus="true"><button type="submit">Send message</button>
   </div>
   <div>
+    <div>
+      <label>Hello <%=name%>!</label>
+    </div>
     <button type="button" id="sign_out">Sign out</button>
   </div>
   <textarea id="connected_users" name="users_display" wrap="soft" disabled="true">Users:<%for(var i=0; i<users.length; i++) {%>
