--- a/views/pages/entry.ejs
+++ b/views/pages/entry.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.auth0.com/js/lock/10.12.0/lock.min.js"></script>
   <script>
     var lock = new Auth0Lock(
@@ -24,6 +25,11 @@
     });
   </script>
   <style>
+    @media only screen and (max-width: 768px) {
+      #login {
+        width: auto;
+      }
+    }
     form{
       margin: 0 auto;
       width: 300px;
@@ -65,7 +71,7 @@
     }
   </style>
 </head>
-<form>
+<form id="login">
   <label>Click here to sign in with a social account and enter the chatroom:</label>
   <div class="button">
     <button type="button" id="sign_in">Log in</button>
